fixing sections spacing

--- a/app/assets/stylesheets/_base.css.scss
+++ b/app/assets/stylesheets/_base.css.scss
@@ -18,8 +18,9 @@ h1 {
   font-family: Sacramento;
   font-size: 4.9em;
   font-weight: normal;
-  margin-bottom: 3%;
   text-align: center;
+  margin-top: 0;
+  margin-bottom: 3%;
 }
 
 h2 {
